--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h2>Event Overview&#x1F7C9; </h2>
 
                         <div class="info-box">
-                            <p> <strong>SMCC-CCIS WEEK 2025</strong> is an annual campus event taht highlight student project, industry talks, and hands-on <br>workshops about software development, cybersecurity,artificial intelligence, and more&#x1F680;&#x1F4BB;&#x1F916;</p>
+                            <p> <strong>SMCC-CCIS WEEK 2025</strong> is an annual campus event that highlight student project, industry talks, and hands-on <br>workshops about software development, cybersecurity,artificial intelligence, and more&#x1F680;&#x1F4BB;&#x1F916;</p>
 
                             <p>Join us CCIS students! Get ready for CCIS DAYS 2025 with the theme: <br>
                                  <em> <blockquote>"&#x2728;Encouraging the Community to Embrace Innovation, Unlock New Opportunities, and Explore Possibilities.&#x2728;"</blockquote></em></p>
